--- a/VCard/appsettings.json
+++ b/VCard/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-DMFQLTGK;Database=StudentCard;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=192.168.23.208,49170;Database=StudentCard;User ID=ha;Password=Passw0rd;Trust Server Certificate=True"
   }
 }
+//LAPTOP-DMFQLTGK
